ansible/manifests/ingress-nginx.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
