ansible/manifests/monitoring.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
