ansible/manifests/minio-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio-tenant
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - minio.k3s.local
      secretName: minio-tls

  rules:
    - host: minio.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio-tenant
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - minio-console.k3s.local
      secretName: minio-tls

  rules:
    - host: minio-console.k3s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9090
